--- a/themesource/atlas_core/web/core/widgets/_progress.scss
+++ b/themesource/atlas_core/web/core/widgets/_progress.scss
@@ -1,65 +1,122 @@
-//
 // DISCLAIMER:
+
 // Do not change this file because it is core styling.
+
 // Customizing core files will make updating Atlas much more difficult in the future.
+
 // To customize any core styling, copy the part you want to customize to styles/web/sass/app/ so the core styling is overwritten.
+
 //
+
+ 
 
 @mixin progress() {
+
     /* ==========================================================================
+
        Progress
 
+ 
+
        Default Mendix progress widget.
+
     ========================================================================== */
 
+ 
+
     .mx-progress {
+
         color: $font-color-default;
-        background: $bg-color-secondary;
+
+        background: transparent;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+ 
 
         .mx-progress-message {
+
             color: $font-color-default;
+
         }
+
+ 
 
         .mx-progress-indicator {
-            position: relative;
-            overflow: hidden;
-            width: 100%;
-            max-width: 100%;
-            height: 2px;
-            margin: auto;
-            padding: 0;
-            border-radius: 0;
-            background: $gray-lighter;
+	width: 70px;
+	height: 70px;
+	background: #dbdbdb;
+	border-radius: 50%;
+	position: relative;
+	display: inline-block; 
 
-            &:before,
-            &:after {
-                position: absolute;
-                top: 0;
-                left: 0;
-                display: block;
-                width: 50%;
-                height: 2px;
-                content: "";
-                transform: translate3d(-100%, 0, 0);
-                background: $brand-primary;
+            &:after,
+
+            &:before {
+
+	content: "";
+	display: block;
+	width: 70px;
+	height: 70px;
+	border-radius: 50%;
+
             }
+
+ 
 
             &::before {
-                animation: loader 2s infinite;
+
+	position: absolute;
+	top: 17px;
+	left: 17px;
+	height: 35px;
+	width: 35px;
+	background-color:  #26d594;
+	animation: loader-circle-3-shrink 3s ease infinite;
+
             }
+
+ 
 
             &::after {
-                animation: loader 2s -2s infinite;
+
+	position: absolute;
+	border: 4px solid transparent;
+	border-top-color: #81f5ca;
+	border-bottom-color: #ccf7e7;
+	top: -4px;
+	left: -4px;
+	animation: loader-circle-3-spin 2s linear infinite;
+
             }
+
         }
+
     }
 
-    @keyframes loader {
-        0% {
-            transform: translate3d(-100%, 0, 0);
-        }
-        100% {
-            transform: translate3d(200%, 0, 0);
-        }
-    }
+ 
+@keyframes loader-circle-3-spin {
+	0% {
+		transform: rotate(0deg) scale(1);
+	}
+	50% {
+		transform: rotate(180deg) scale(1.2);
+	}
+	100% {
+		transform: rotate(360deg) scale(1);
+	}
+}
+@keyframes loader-circle-3-shrink {
+	0% {
+		transform: scale(1);
+	}
+	50% {
+		transform: scale(1.6);
+	}
+	100% {
+		transform: scale(1);
+	}
+}
 }
